--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,13 +40,13 @@ importFrom(optparse,OptionParser)
 importFrom(optparse,make_option)
 importFrom(optparse,parse_args2)
 importFrom(purrr,detect)
+importFrom(purrr,keep)
 importFrom(purrr,map)
 importFrom(purrr,map2_chr)
 importFrom(purrr,map_chr)
 importFrom(purrr,map_dbl)
 importFrom(purrr,map_dfr)
 importFrom(purrr,map_int)
-importFrom(purrr,map_lgl)
 importFrom(purrr,walk)
 importFrom(purrr,walk2)
 importFrom(readr,cols)
