Add colored output for help message and rule printing

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,14 @@ export(rule_warn)
 export(rule_web)
 export(rule_write)
 importFrom(bench,bench_time)
+importFrom(cli,ansi_strwrap)
+importFrom(cli,cli_code)
+importFrom(cli,cli_h2)
+importFrom(cli,col_blue)
+importFrom(cli,col_cyan)
+importFrom(cli,col_green)
+importFrom(cli,col_red)
+importFrom(cli,style_bold)
 importFrom(fs,dir_create)
 importFrom(fs,dir_ls)
 importFrom(fs,file_info)
