--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ importFrom(cli,col_blue)
 importFrom(cli,col_cyan)
 importFrom(cli,col_green)
 importFrom(cli,col_red)
+importFrom(cli,col_yellow)
 importFrom(cli,style_bold)
 importFrom(fs,dir_create)
 importFrom(fs,dir_ls)
@@ -50,13 +51,13 @@ importFrom(optparse,parse_args2)
 importFrom(purrr,detect)
 importFrom(purrr,keep)
 importFrom(purrr,map)
-importFrom(purrr,map2_chr)
 importFrom(purrr,map_chr)
 importFrom(purrr,map_dbl)
 importFrom(purrr,map_dfr)
 importFrom(purrr,map_int)
+importFrom(purrr,pmap_dfr)
+importFrom(purrr,pwalk)
 importFrom(purrr,walk)
-importFrom(purrr,walk2)
 importFrom(readr,cols)
 importFrom(readr,read_csv)
 importFrom(readr,read_file)
