Refactor logging to use cli functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,7 +15,6 @@ export(rule_deps)
 export(rule_desc)
 export(rule_err)
 export(rule_hist)
-export(rule_log)
 export(rule_msg)
 export(rule_name)
 export(rule_path)
@@ -27,13 +26,19 @@ export(rule_web)
 export(rule_write)
 importFrom(bench,bench_time)
 importFrom(cli,ansi_strwrap)
+importFrom(cli,cli_abort)
 importFrom(cli,cli_code)
 importFrom(cli,cli_h2)
+importFrom(cli,cli_inform)
+importFrom(cli,cli_warn)
 importFrom(cli,col_blue)
 importFrom(cli,col_cyan)
 importFrom(cli,col_green)
 importFrom(cli,col_red)
 importFrom(cli,col_yellow)
+importFrom(cli,format_error)
+importFrom(cli,format_message)
+importFrom(cli,format_warning)
 importFrom(cli,style_bold)
 importFrom(fs,dir_create)
 importFrom(fs,dir_ls)
