Add support for rule execution trace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,9 @@ importFrom(cli,cli_h2)
 importFrom(cli,cli_inform)
 importFrom(cli,cli_warn)
 importFrom(cli,col_blue)
+importFrom(cli,col_br_blue)
+importFrom(cli,col_br_green)
+importFrom(cli,col_br_red)
 importFrom(cli,col_cyan)
 importFrom(cli,col_green)
 importFrom(cli,col_red)
@@ -49,6 +52,7 @@ importFrom(fs,path_ext_remove)
 importFrom(fs,path_file)
 importFrom(fst,read_fst)
 importFrom(fst,write_fst)
+importFrom(glue,glue)
 importFrom(magrittr,"%>%")
 importFrom(optparse,OptionParser)
 importFrom(optparse,make_option)
